--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><head><title>My LinkedIn Resume</title><style type="text/css">
           td {
           font-family: Arial, Helvetica, sans-serif;
